--- a/app/src/main/res/layout/fragment_disliked_ingredients_cust.xml
+++ b/app/src/main/res/layout/fragment_disliked_ingredients_cust.xml
@@ -1,96 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/frameLayout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#FFFFFF"
-    tools:context=".view.personalization.fragments.UnlikeIngredientsCustomizationFragmentPersonalizationCustom">
+    tools:context=".view.userPreferences.ui.DislikedIngredientsCustomizationFragment">
+    <data>
+        <variable
+            name="viewmodel"
+            type="piotr.michalkiewicz.mealplannerclient.view.userPreferences.ui.UserPreferencesViewModel" />
+    </data>
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/frameLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#FFFFFF"
+        >
 
-    <TextView
-        android:id="@+id/textView14"
-        style="@style/listElementText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:text="@string/what_you_dislike"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/textView14"
+            style="@style/listElementText"
+            android:layout_width="wrap_content"
+            android:layout_height="27dp"
+            android:layout_marginTop="16dp"
+            android:text="@string/what_you_dislike"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.504"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/confirmBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="45dp"
-        android:text="@string/next"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="421dp"
-        android:layout_height="404dp"
-        app:layout_constraintBottom_toTopOf="@+id/confirmBtn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView14"
-        app:layout_constraintVertical_bias="0.53"
-        app:layout_constraintWidth_max="150dp">
-
-        <ScrollView
-            android:id="@+id/buttonsScrollView"
+        <Button
+            android:id="@+id/confirmBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="45dp"
+            android:text="@string/next"
+            android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.48000002">
+            app:layout_constraintStart_toStartOf="parent" />
 
-            <LinearLayout
-                android:id="@+id/linearLayoutIngredientsButtons"
-                android:layout_width="fill_parent"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout2"
+            android:layout_width="wrap_content"
+            android:layout_height="345dp"
+            app:layout_constraintBottom_toTopOf="@+id/confirmBtn"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView14"
+            app:layout_constraintWidth_max="150dp">
+
+            <ScrollView
+                android:id="@+id/buttonsScrollView"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.48000002">
 
-                <Button
-                    android:id="@+id/avoca6doBtn"
-                    android:layout_width="match_parent"
+                <com.google.android.material.button.MaterialButtonToggleGroup
+                    android:id="@+id/linearLayoutIngredientsButtons"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/avocado" />
+                    android:orientation="vertical"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
 
-                <Button
-                    android:id="@+id/avoc5adoBtn"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/beets" />
+                    <Button
+                        android:id="@+id/avoca6doBtn"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/avocado"
+                        android:visibility="invisible"
+                        tools:visibility="visible" />
 
-                <Button
-                    android:id="@+id/avoc4adoBtn"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/bell_pepper" />
+                    <Button
+                        android:id="@+id/avoc5adoBtn"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/beets"
+                        android:visibility="invisible"
+                        tools:visibility="visible" />
 
-                <Button
-                    android:id="@+id/avoca3doBtn"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/brussel_sprout" />
+                    <Button
+                        android:id="@+id/avoc4adoBtn"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/bell_pepper"
+                        android:visibility="invisible"
+                        tools:visibility="visible" />
 
-                <Button
-                    android:id="@+id/avoca2doBtn"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/egg_plant" />
+                    <Button
+                        android:id="@+id/avoca3doBtn"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/brussel_sprout"
+                        android:visibility="invisible"
+                        tools:visibility="visible" />
 
-            </LinearLayout>
-        </ScrollView>
+                    <Button
+                        android:id="@+id/avoca2doBtn"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/egg_plant"
+                        android:visibility="invisible"
+                        tools:visibility="visible" />
+
+                </com.google.android.material.button.MaterialButtonToggleGroup>
+            </ScrollView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
