--- a/app/src/main/res/layout/activity_edit_height.xml
+++ b/app/src/main/res/layout/activity_edit_height.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.settings.EditHeightActivity">
+    tools:context=".view.userPreferences.oldFragments.EditHeightActivity">
 
     <EditText
         android:id="@+id/heightET"
