--- a/app/src/main/res/layout/activity_edit_password.xml
+++ b/app/src/main/res/layout/activity_edit_password.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.settings.EditPasswordActivity">
+    tools:context=".view.userPreferences.oldFragments.EditPasswordActivity">
 
     <ImageView
         android:id="@+id/imageView3"
