--- a/app/src/main/res/layout/start_customization_fragment.xml
+++ b/app/src/main/res/layout/start_customization_fragment.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.personalization.fragments.StartCustomizationFragmentPersonalizationCustom">
+    tools:context=".view.userPreferences.ui.StartCustomizationFragment">
 
     <include
         android:id="@+id/startCustomizationContent"
